<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/logo"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPassword"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtName"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/imagesRelLayout"
            android:layout_below="@+id/edtAddress"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/firstImage"
                android:layout_marginLeft="50dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/secondImage"
                android:layout_toRightOf="@+id/firstImage"
                android:layout_marginLeft="10dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/thirdImage"
                android:layout_toRightOf="@+id/secondImage"
                android:layout_marginLeft="10dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/fourthImage"
                android:layout_toEndOf="@id/thirdImage"
                android:layout_marginStart="10dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/fifthImage"
                android:layout_toEndOf="@id/fourthImage"
                android:layout_marginLeft="10dp"
                />



        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@id/imagesRelLayout"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/warning"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnRegister"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/txtLogin"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textColor="@color/blue"
            />

    </RelativeLayout>
    <TextView
        android:id="@+id/txtLic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="italic"
        />

</RelativeLayout>